third_party/move/move-compiler-v2/tests/verification/noverify/cross_module_invalid.exp

Diagnostics:
error: unbound module
   ┌─ tests/verification/noverify/cross_module_invalid.move:23:9
   │
23 │         A::build_foo()
   │         ^ Unbound module or type alias 'A'
